# stm32h743iit6-hal

./: CMakeLists.txt  CMakePresets.json  README.md
include/: hal.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_flash.h  stm32h7xx_hal_flash_ex.h
src/: system_stm32h7xx.c
src/CMSIS/Device/ST/STM32H7xx/Include/: stm32h743xx.h
src/hal/: stm32h7xx_hal_flash_ex.c
